@@ -186,6 +186,17 @@ protected:
 	~IReportHandlerV1() {}
 };
 
+// Extends IReportHandlerV1 for delivering signals about insufficient partials conditions to the client.
+// Corresponds to the mt32emu_report_handler_i_v2 interface.
+class IReportHandlerV2 : public IReportHandlerV1 {
+public:
+	virtual void onNoteOnIgnored(Bit32u partialsNeeded, Bit32u partialsFree) = 0;
+	virtual void onPlayingPolySilenced(Bit32u partialsNeeded, Bit32u partialsFree) = 0;
+
+protected:
+~IReportHandlerV2() {}
+};
+
 // Defines the interface for receiving MIDI messages generated by MIDI stream parser.
 // Corresponds to the current version of mt32emu_midi_receiver_i interface.
 class IMidiReceiver {
@@ -234,6 +245,7 @@ public:
 	void createContext(mt32emu_report_handler_i report_handler = CppInterfaceImpl::NULL_REPORT_HANDLER, void *instance_data = NULL) { freeContext(); c = mt32emu_create_context(report_handler, instance_data); }
 	void createContext(IReportHandler &report_handler) { createContext(CppInterfaceImpl::getReportHandlerThunk(MT32EMU_REPORT_HANDLER_VERSION_0), &report_handler); }
 	void createContext(IReportHandlerV1 &report_handler) { createContext(CppInterfaceImpl::getReportHandlerThunk(MT32EMU_REPORT_HANDLER_VERSION_1), &report_handler); }
+	void createContext(IReportHandlerV2 &report_handler) { createContext(CppInterfaceImpl::getReportHandlerThunk(MT32EMU_REPORT_HANDLER_VERSION_2), &report_handler); }
 	void freeContext() { if (c != NULL) { mt32emu_free_context(c); c = NULL; } }
 	mt32emu_return_code addROMData(const Bit8u *data, size_t data_size, const mt32emu_sha1_digest *sha1_digest = NULL) { return mt32emu_add_rom_data(c, data, data_size, sha1_digest); }
 	mt32emu_return_code addROMFile(const char *filename) { return mt32emu_add_rom_file(c, filename); }
@@ -420,6 +432,13 @@ static void MT32EMU_C_CALL onMidiMessageLEDStateUpdated(void *instance_data, mt3
 	static_cast<IReportHandlerV1 *>(instance_data)->onMidiMessageLEDStateUpdated(led_state != MT32EMU_BOOL_FALSE);
 }
 
+static void MT32EMU_C_CALL onNoteOnIgnored(void *instance_data, Bit32u partialsNeeded, Bit32u partialsFree) {
+	static_cast<IReportHandlerV2 *>(instance_data)->onNoteOnIgnored(partialsNeeded, partialsFree);
+}
+static void MT32EMU_C_CALL onPlayingPolySilenced(void *instance_data, Bit32u partialsNeeded, Bit32u partialsFree) {
+	static_cast<IReportHandlerV2 *>(instance_data)->onPlayingPolySilenced(partialsNeeded, partialsFree);
+}
+
 #define MT32EMU_REPORT_HANDLER_V0_THUNK \
 	getReportHandlerVersionID, \
 	printDebug, \
@@ -437,27 +456,44 @@ static void MT32EMU_C_CALL onMidiMessageLEDStateUpdated(void *instance_data, mt3
 	onPolyStateChanged, \
 	onProgramChanged
 
+#define MT32EMU_REPORT_HANDLER_V1_THUNK \
+	onLCDStateUpdated, \
+	onMidiMessageLEDStateUpdated
+
+#define MT32EMU_REPORT_HANDLER_V2_THUNK \
+	onNoteOnIgnored, \
+	onPlayingPolySilenced
+
 static const mt32emu_report_handler_i_v0 REPORT_HANDLER_V0_THUNK = {
 	MT32EMU_REPORT_HANDLER_V0_THUNK
 };
 
 static const mt32emu_report_handler_i_v1 REPORT_HANDLER_V1_THUNK = {
 	MT32EMU_REPORT_HANDLER_V0_THUNK,
-	onLCDStateUpdated,
-	onMidiMessageLEDStateUpdated
+	MT32EMU_REPORT_HANDLER_V1_THUNK
+};
+
+static const mt32emu_report_handler_i_v2 REPORT_HANDLER_V2_THUNK = {
+	MT32EMU_REPORT_HANDLER_V0_THUNK,
+	MT32EMU_REPORT_HANDLER_V1_THUNK,
+	MT32EMU_REPORT_HANDLER_V2_THUNK
 };
 
 #undef MT32EMU_REPORT_HANDLER_THUNK_V0
+#undef MT32EMU_REPORT_HANDLER_THUNK_V1
+#undef MT32EMU_REPORT_HANDLER_THUNK_V2
 
 static mt32emu_report_handler_version MT32EMU_C_CALL getReportHandlerVersionID(mt32emu_report_handler_i thunk) {
 	if (thunk.v0 == &REPORT_HANDLER_V0_THUNK) return MT32EMU_REPORT_HANDLER_VERSION_0;
+	if (thunk.v1 == &REPORT_HANDLER_V1_THUNK) return MT32EMU_REPORT_HANDLER_VERSION_1;
 	return MT32EMU_REPORT_HANDLER_VERSION_CURRENT;
 }
 
 static mt32emu_report_handler_i getReportHandlerThunk(mt32emu_report_handler_version versionID) {
 	mt32emu_report_handler_i thunk;
 	if (versionID == MT32EMU_REPORT_HANDLER_VERSION_0) thunk.v0 = &REPORT_HANDLER_V0_THUNK;
-	else thunk.v1 = &REPORT_HANDLER_V1_THUNK;
+	else if (versionID == MT32EMU_REPORT_HANDLER_VERSION_1) thunk.v1 = &REPORT_HANDLER_V1_THUNK;
+	else thunk.v2 = &REPORT_HANDLER_V2_THUNK;
 	return thunk;
 }
 
